rust/calib_dash/src/snapshots/calib_dash__ui__tests__convergence_tab_renders_metrics_and_churn.snap
---
source: rust/calib_dash/src/ui.rs
expression: "render_snapshot(&mut app, 100, 30)"
---
 Fit │ Convergence │ Tolerances                                                                     
 6 batches  |  retained frames: 6  stride: every 2  dropped: 4                                      
┌wrmse  peak 5  now 0.8333  (NaN holds)────────────────────────────────────────────────────────────┐
│█▄▂▂▁▁                                                                                            │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌max_delta  peak 10  now 1.6667  (NaN holds)───────────────────────────────────────────────────────┐
│█▄▂▂▁▁                                                                                            │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌mean_delta  peak 4  now 0.6667  (NaN holds)───────────────────────────────────────────────────────┐
│█                                                                                                 │
│██▅▄▃▂                                                                                            │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌path_nodes  peak 14  now 14───────────────────────────────────────────────────────────────────────┐
│▆▇█▆▇█                                                                                            │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ridge_half_width  peak 2  now 1.1667  (NaN holds)─────────────────────────────────────────────────┐
│█▆▅▅▄▄                                                                                            │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Batches (churn: admit/evict)──────────────────────────────────────────────────────────────────────┐
│chunk    n        wrmse    max_d    path     ridge_hw admit    evict                              │
│0        20       5.0000   10.0000  12       2.0000   0        0                                  │
│1        21       2.5000   5.0000   13       1.5000   1        1                                  │
│2        22       1.6667   3.3333   14       1.3333   2        0                                  │
│3        23       1.2500   2.5000   12       1.2500   0        1                                  │
│4        24       1.0000   2.0000   13       1.2000   1        0                                  │
│5        25       0.8333   1.6667   14       1.1667   2        1                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
 b0 n next · r run · h l tab · q detach · ^C abort                                           ? keys 
--- REVERSED cells (row: column spans) ---
  0: 7-17
