rust/calib_dash/src/snapshots/calib_dash__ui__tests__dp_lines_report_the_last_nodes_decision_and_considered_list.snap
---
source: rust/calib_dash/src/ui.rs
expression: "text.join(\"\\n\")"
---
last node: chose=11 acc_w=3.111
  considered:
    j=11 edge_w=0.111

path:
i=  0 lib=1.00 obs=2.00 root 
i=  1 lib=2.00 obs=4.00 <-0  
i=  2 lib=4.00 obs=8.00 <-1  
i=  3 lib=5.00 obs=10.00 <-2  
i=  4 lib=7.00 obs=14.00 <-3  
i=  5 lib=8.00 obs=16.00 <-4  
i=  6 lib=9.00 obs=20.00 <-5  
i=  7 lib=10.00 obs=24.00 <-6  
i=  8 lib=11.00 obs=28.00 <-7  
i=  9 lib=12.00 obs=32.00 <-8  
i= 10 lib=13.00 obs=36.00 <-9  
i= 11 lib=14.00 obs=22.00 root 
i= 12 lib=15.50 obs=44.00 <-11
