rust/calib_dash/src/snapshots/calib_dash__ui__tests__dp_pane_shows_the_selected_nodes_decision_and_considered_list.snap
---
source: rust/calib_dash/src/ui.rs
expression: out
---
 Fit │ Convergence │ Tolerances                                                                     
    ┌ Fit — observed RT (s) ↑ vs library RT (s) → ────────── b0 ┐┌DP───────────────────────────────┐
    │ Showing: none — density only                              ││node 12: lib=15.500 obs=44.000   │
    │                                                           ││chose=11 acc_w=3.111             │
    │                                                       ▄▄▄▄││  considered:                    │
    │                                                       ░░░░││    j=11 edge_w=0.111            │
  40┤                                                           ││                                 │
    │                                               ▄▄▄▄▄       ││path:                            │
    │                                               █████       ││   i=  0 lib=1.00 obs=2.00       │
    │                                                           ││-> i=  1 lib=2.00 obs=4.00       │
    │                                            ▄▄▄▄           ││-> i=  2 lib=4.00 obs=8.00       │
  30┤                                            ████           ││-> i=  3 lib=5.00 obs=10.00      │
    │                                        █████              ││-> i=  4 lib=7.00 obs=14.00      │
    │                                    ▄▄▄▄█▀▀▀▀              ││-> i=  5 lib=8.00 obs=16.00      │
    │                                    █████                  ││-> i=  6 lib=9.00 obs=20.00      │
    │                                                   ░░░░░   ││-> i=  7 lib=10.00 obs=24.00     │
  20┤                                 ▄▄▄▄              ▀▀▀▀▀   ││-> i=  8 lib=11.00 obs=28.00     │
    │                                 ████                      ││-> i=  9 lib=12.00 obs=32.00     │
    │                             ▓▓▓▓▓                         ││-> i= 10 lib=13.00 obs=36.00     │
    │                      ▄▄▄▄▄▄▄▓▀▀▀▀                         ││   i= 11 lib=14.00 obs=22.00     │
    │                      ▓▓▓▓▓▓▓▓                             ││-> i= 12 lib=15.50 obs=44.00     │
  10┤                  ▓▓▓▓▓                                    ││                                 │
    │           ▄▄▄▄▄▄▄▓▀▀▀▀                                    ││                                 │
    │           ▒▒▒▒▒▒▒▒                                        ││                                 │
    │       ▒▒▒▒▒                                               ││                                 │
    │   ▄▄▄▄▒▀▀▀▀                                               ││                                 │
   0┤   ▒▒▒▒▒                                                   ││                                 │
    └┴───────────────────────────────────┴──────────────────────┘│                                 │
     0                                  10                       └─────────────────────────────────┘
 b0 n next · r run · < > frame · m M layer · d dp · h l tab · q detach · ^C abort            ? keys
