rust/calib_dash/src/snapshots/calib_dash__ui__tests__fit_layer_Curve.snap
---
source: rust/calib_dash/src/ui.rs
expression: out
---
    ┌ Fit -- observed RT (s) ↑ vs library RT coordinate → ───────────────────────────────────── b0 ┐
    │ Showing: curve -- fitted calibration                                                         │
    │                                                                                              │
    │                                                                                        ▄▄▄▄▄▄│
    │                                                                                        ░░░░░░│
  40┤                                                                                              │
    │                                                                            ▄▄▄▄▄▄▄······     │
    │                                                                            ███████           │
    │                                                                                              │
    │                                                                      ▄██████                 │
  30┤                                                                 ·····███████                 │
    │                                                                ███████                       │
    │                                                          ▄▄▄▄▄▄█▀▀▀▀▀▀                       │
    │                                                          ███████                             │
    │                                                                                  ░░░░░░░     │
  20┤                                                    ▄██████                       ▀▀▀▀▀▀▀     │
    │                                               ·····███████                                   │
    │                                               ▓▓▓▓▓▓                                         │
    │                                   ▄▄▄▄▄▄▄▓▓▓▓▓▀▀▀▀▀▀                                         │
    │                                   ▓▓▓▓▓▓▓▓▓▓▓▓                                               │
  10┤                             ▓▓▓▓▓▓▓                                                          │
    │                 ▄▄▄▄▄▄▄▒▒▒▒▒▓▓▓▓▓▓▓                                                          │
    │                 ▒▒▒▒▒▒▒▒▒▒▒▒▒                                                                │
    │           ▒▒▒▒▒▒▒                                                                            │
    │     ▄▒▒▒▒▒▒▒▒▒▒▒▒                                                                            │
   0┤     ▒▒▒▒▒▒▒                                                                                  │
    └┴────────────────────────────┴────────────────────────────┴─────────────────────────────┴─────┘
     0                            5                           10                            15      
--- REVERSED cells (row: column spans) ---
  4: 94-98
  6: 88-93
  7: 82-87
  9: 76-81
 10: 70-75
 13: 64-69
 15: 58-63
 16: 52-57
 18: 47-51
 19: 41-46
 21: 29-40
 22: 23-28
 24: 11-22
