rust/calib_dash/src/snapshots/calib_dash__ui__tests__fit_layer_None.snap
---
source: rust/calib_dash/src/ui.rs
expression: out
---
    ┌ Fit -- observed RT (s) ↑ vs library RT coordinate → ───────────────────────────────────── b0 ┐
    │ Showing: none -- density only                                                                │
    │                                                                                              │
    │                                                                                        ▄▄▄▄▄▄│
    │                                                                                        ░░░░░░│
  40┤                                                                                              │
    │                                                                            ▄▄▄▄▄▄▄           │
    │                                                                            ███████           │
    │                                                                                              │
    │                                                                      ▄▄▄▄▄▄▄                 │
  30┤                                                                      ███████                 │
    │                                                                ███████                       │
    │                                                          ▄▄▄▄▄▄█▀▀▀▀▀▀                       │
    │                                                          ███████                             │
    │                                                                                  ░░░░░░░     │
  20┤                                                    ▄▄▄▄▄▄▄                       ▀▀▀▀▀▀▀     │
    │                                                    ███████                                   │
    │                                               ▓▓▓▓▓▓                                         │
    │                                   ▄▄▄▄▄▄▄▄▄▄▄▄▀▀▀▀▀▀                                         │
    │                                   ▓▓▓▓▓▓▓▓▓▓▓▓                                               │
  10┤                             ▓▓▓▓▓▓▓                                                          │
    │                 ▄▄▄▄▄▄▄▄▄▄▄▄▓▀▀▀▀▀▀                                                          │
    │                 ▒▒▒▒▒▒▒▒▒▒▒▒▒                                                                │
    │           ▒▒▒▒▒▒▒                                                                            │
    │     ▄▄▄▄▄▄▒▀▀▀▀▀▀                                                                            │
   0┤     ▒▒▒▒▒▒▒                                                                                  │
    └┴────────────────────────────┴────────────────────────────┴─────────────────────────────┴─────┘
     0                            5                           10                            15
