rust/calib_dash/src/snapshots/calib_dash__ui__tests__fit_layer_Path.snap
---
source: rust/calib_dash/src/ui.rs
expression: out
---
    ┌ Fit -- observed RT (s) ↑ vs library RT coordinate → ───────────────────────────────────── b0 ┐
    │ Showing: path -- O chosen, X greedy tail                                                     │
    │                                                                                              │
    │                                                                                        ▄▄▄▄▄▄│
    │                                                                                        X░░░░░│
  40┤                                                                                              │
    │                                                                            ▄▄▄▄▄▄▄           │
    │                                                                            O██████           │
    │                                                                                              │
    │                                                                      ▄▄▄▄▄▄▄                 │
  30┤                                                                      O██████                 │
    │                                                                ███████                       │
    │                                                          ▄▄▄▄▄▄O▀▀▀▀▀▀                       │
    │                                                          O██████                             │
    │                                                                                  ░░░░░░░     │
  20┤                                                    ▄▄▄▄▄▄▄                       ▀▀▀▀▀▀▀     │
    │                                                    O██████                                   │
    │                                               ▓▓▓▓▓▓                                         │
    │                                   ▄▄▄▄▄▄▄▄▄▄▄▄O▀▀▀▀▀                                         │
    │                                   ▓▓▓▓▓▓O▓▓▓▓▓                                               │
  10┤                             ▓▓▓▓▓▓▓                                                          │
    │                 ▄▄▄▄▄▄▄▄▄▄▄▄O▀▀▀▀▀▀                                                          │
    │                 ▒▒▒▒▒▒O▒▒▒▒▒▒                                                                │
    │           ▒▒▒▒▒▒▒                                                                            │
    │     ▄▄▄▄▄▄O▀▀▀▀▀▀                                                                            │
   0┤     O▒▒▒▒▒▒                                                                                  │
    └┴────────────────────────────┴────────────────────────────┴─────────────────────────────┴─────┘
     0                            5                           10                            15
