rust/calib_dash/src/snapshots/calib_dash__ui__tests__fit_layer_Ridge.snap
---
source: rust/calib_dash/src/ui.rs
expression: "render(&mut app, 100, 30)"
---
 Fit │ Convergence │ Tolerances                                                                     
    ┌ Fit — observed RT (s) ↑ vs library RT (s) → ────────────────────────────── b0 · Grid · ridge ┐
    │                                                                                              │
    │                                                                                        ░▄▄▄▄▄│
    │                                                                                        ░░░░░░│
    │                                                                            ·           ▀▀▀▀▀▀│
  40┤                                                                      ·     ▄▄▄▄▄▄▄     ·     │
    │                                                                            ███████           │
    │                                                                            ▀▀▀▀▀▀▀           │
    │                                                          ·           ▄▄▄▄▄▄▄                 │
    │                                                                      ███████                 │
  30┤                                                                ███████▀▀▀▀▀▀                 │
    │                                                    ·     ▄▄▄▄▄▄███████     ·                 │
    │                                                          ███████                             │
    │                                                          ▀▀▀▀▀▀▀                 ▄▄▄▄▄▄▄     │
    │                                                                                  ░░░░░░░     │
  20┤                                                    ███████     ·     ·           ▀▀▀▀▀▀▀     │
    │                                         ·     ▓▄▄▄▄███████                                   │
    │                                               ▓▓▓▓▓▓                                         │
    │                                   ▓▓▓▓▓▓▓▓▓▓▓▓▀▀▀▀▀▀     ·                                   │
    │                       ·     ▓▄▄▄▄▄▓▓▓▓▓▓▓▓▓▓▓▓                                               │
  10┤                             ▓▓▓▓▓▓▓                                                          │
    │                 ▒▒▒▒▒▒▒▒▒▒▒▒▓▀▀▀▀▀▀     ·     ·    ·                                         │
    │           ▒▄▄▄▄▄▒▒▒▒▒▒▒▒▒▒▒▒▒                                                                │
    │           ▒▒▒▒▒▒▒                                                                            │
    │     ▒▒▒▒▒▒▒▀▀▀▀▀▀     ·     ·                                                                │
   0┤     ▒▒▒▒▒▒▒                                                                                  │
    └┴────────────────────────────┴────────────────────────────┴─────────────────────────────┴─────┘
     0                            5                           10                            15      
 b0 Grid n · r · [ ] · < > · m M · d · h l · q · ^C                                          ? keys
