rust/calib_dash/src/snapshots/calib_dash__ui__tests__fit_stage_Curve.snap
---
source: rust/calib_dash/src/ui.rs
expression: "render(&mut app, 100, 30)"
---
 Fit │ Convergence │ Tolerances                                                                     
    ┌ Fit — observed RT (s) ↑ vs library RT (s) → ───────────────────────────────────── b0 · Curve ┐
    │                                                                                              │
    │                                                                                        ▄▄▄▄▄▄│
    │                                                                                        ░░░░░░│
    │                                                                                        +─────│
  40┤                                                                            ▄▄▄▄▄▄▄──────     │
    │                                                                            ███████           │
    │                                                                            O──────           │
    │                                                                      ▄──────                 │
    │                                                                      ███████                 │
  30┤                                                                █─────O▀▀▀▀▀▀                 │
    │                                                          ▄▄▄▄▄▄O██████                       │
    │                                                          ███████                             │
    │                                                          O──────                 ▄▄▄▄▄▄▄     │
    │                                                                                  ░░░░░░░     │
  20┤                                                    █──────                       ▀▀▀▀▀▀▀     │
    │                                               ─────O██████                                   │
    │                                               ▓▓▓▓▓▓                                         │
    │                                   ▓▓▓▓▓▓▓─────O▀▀▀▀▀                                         │
    │                             ▄▄▄▄▄▄·─────O▓▓▓▓▓                                               │
  10┤                             ▓▓▓▓▓▓▓                                                          │
    │                 ▒▒▒▒▒▒▒─────O──────                                                          │
    │           ▄▄▄▄▄▄·─────O▒▒▒▒▒▒                                                                │
    │           ▒▒▒▒▒▒▒                                                                            │
    │     ▒─────O──────                                                                            │
   0┤─────O▒▒▒▒▒▒                                                                                  │
    └┴────────────────────────────┴────────────────────────────┴─────────────────────────────┴─────┘
     0                            5                           10                            15      
 b0 Curve n · r · [ ] · < > · s p c w · d · h l · q · ^C                                     ? keys
