rust/calib_dash/src/snapshots/calib_dash__ui__tests__fit_stage_Path.snap
---
source: rust/calib_dash/src/ui.rs
expression: "render(&mut app, 100, 30)"
---
 Fit │ Convergence │ Tolerances                                                                     
      #▒▒▒▒▒▒                                                                                       
      ▒▒▒▒▒▒#▄▄▄▄▄▄                                                                                 
            ▒▒▒▒▒▒▒                                                                                 
            ▀▀▀▀▀▀.▄▄▄▄▄▄#▄▄▄▄▄▄                                                                    
                  ▒▒▒▒▒▒▒▒▒▒▒▒▒▒                                                                    
                  ▀▀▀▀▀▀▀▀▀▀▀▀▀#▓▓▓▓▓▓                                                              
                               ▓▓▓▓▓▓▓                                                              
                                     .▓▓▓▓▓#▓▓▓▓▓▓                                                  
                                     ▓▓▓▓▓▓▓▓▓▓▓▓▓#▄▄▄▄▄▄                                           
                                                  ▓▓▓▓▓▓▓                                           
                                                  ▀▀▀▀▀▀#▄▄▄▄▄▄                                     
                                                        ███████                                     
                                                        ▀▀▀▀▀▀▀                        ░░░░░░░      
                                                                                       ░░░░░░░      
                                                              #██████                               
                                                              ██████#▄▄▄▄▄▄                         
                                                                    ███████                         
                                                                    ▀▀▀▀▀▀▀#▄▄▄▄▄▄                  
                                                                           ███████                  
                                                                           ▀▀▀▀▀▀▀                  
                                                                                                    
                                                                                 #██████            
                                                                                 ███████            
                                                                                                    
                                                                                             +▄▄▄▄▄▄
                                                                                             ░░░░░░░
                                                                                             ▀▀▀▀▀▀▀
                                                                                                    
 b0 Path cnt:- | n:next r:run q:detach ^C:abort [/]:stage h/l:tab <>:frame s/p/c/w:ovl d:dp
